--- a/css/stiles.css
+++ b/css/stiles.css
@@ -137,6 +137,7 @@ button {
     border-radius: 20px;
     border-width: 2px;
     border-color: rgb(255, 255, 255);
+    background: none;
 }
 
 .logotype {
@@ -201,15 +202,124 @@ button {
 
 /* SECTION PARTNER */
 
+.section__partner {
+    padding-top: 68px;
+    padding-bottom: 56px;
+}
 
+.partner__caption {
+    font-size: 22px;
+    font-family: "Montserrat";
+    color: rgb(51, 51, 51);
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 14px;
+}
 
+/* .partner__card-list {} */
 
+.partner__card-list-item {
+    margin-bottom: 24px;
+}
 
+.partner__card-wrapper {
+    position: relative;
+    width: 122px;
+    margin: 0 auto;
+    margin-bottom: 18px;
+}
+
+.partner__card-wrapper::after {
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 31px;
+    height: 31px;
+}
+
+.partner__photo-01::after {
+    background-color: rgb(255, 78, 80);
+    background-image: url(../images/main/section-partner/icons/tv.png);
+}
+
+.partner__photo-02::after {
+    background-color: rgb(255, 165, 7);
+    background-image: url(../images/main/section-partner/icons/flask.png);
+}
+
+.partner__photo-03::after {
+    background-color: rgb(28, 215, 173);
+    background-image: url(../images/main/section-partner/icons/cup.png);
+}
+
+.partner__photo-04::after {
+    background-color: rgb(78, 115, 219);
+    background-image: url(../images/main/section-partner/icons/plane.png);
+}
+
+.partner__card-image {
+    border-radius: 50%;
+    background-color: rgb(251, 251, 251);
+}
+
+.partner__card-title {
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(51, 51, 51);
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.partner__card-description {
+    display: block;
+    width: 220px;
+    margin: 0 auto;
+    font-size: 14px;
+    font-family: "Roboto";
+    color: rgb(102, 102, 102);
+    line-height: 1.2;
+    text-align: center;
+}
+
+.partner__button {
+    display: block;
+    margin: 0 auto;
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(255, 78, 80);
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(255, 78, 80);
+    border-radius: 20px;
+    background-color: rgb(255, 255, 255);
+    width: 284px;
+    height: 44px;
+}
+
+.partner__button:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 78, 80);
+}
 
 /* @media TABLET */
-/* HEADER */
 
 @media (min-width: 768px) {
+
+    /* HEADER */
 
     .header {
         background-image: url(../images/header/header-tablet-image.png);
@@ -253,10 +363,36 @@ button {
     .header__wrapper-button {
         width: 226px;
     }
+
+    /* MAIN */
+
+    .section__partner {
+        padding-bottom: 40px;
+    }
+
+    .partner__caption {
+        margin-bottom: 30px;
+    }
+
+    .partner__card-list {
+        width: 492px;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .partner__card-wrapper {
+        margin-bottom: 18px;
+    }
+
+    .partner__button {
+        width: 192px;
+    }
 }
 
-
 /* @media DESKTOP */
+
 /* HEADER */
 
 @media (min-width: 1440px) {
@@ -273,5 +409,20 @@ button {
 
     .authorization-menu {
         margin: 0px 2px 146px 2px;
+    }
+
+    /* MAIN */
+
+    .section__partner {
+        padding-bottom: 70px;
+    }
+
+    .partner__card-list {
+        width: auto;
+        flex-wrap: nowrap;
+    }
+
+    .partner__button {
+        width: 192px;
     }
 }
